removed all scripting to have simple page

--- a/client/views/main.html
+++ b/client/views/main.html
@@ -15,7 +15,7 @@
          width: 400px;
          margin: auto;
       }
-      #standy-by {
+      #stand-by {
          margin-left: 330px;
          font-size: 50px;
          line-height: 35px;
