--- a/client/views/main.html
+++ b/client/views/main.html
@@ -16,7 +16,7 @@
          margin: auto;
       }
       #standy-by {
-         margin-left: 330px;
+         margin: 20px auto;
          font-size: 50px;
          line-height: 35px;
       }
