--- a/client/views/main.html
+++ b/client/views/main.html
@@ -31,6 +31,7 @@
       #stand-by {
          margin: 20px auto;
          font-size: 50px;
+         font-weight: 100;
          line-height: 35px;
       }
       @keyframes pants {
