--- a/client/views/main.html
+++ b/client/views/main.html
@@ -33,6 +33,7 @@
          font-size: 50px;
          font-weight: 100;
          line-height: 35px;
+         text-align: center;
       }
       @keyframes pants {
          0% {
