--- a/src/views/grid.html
+++ b/src/views/grid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="src/styles/main.css" rel="stylesheet">
+    <link href="dist/main.css" rel="stylesheet">
 </head>
 <body>
 <div class="grid">
