--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="./src/styles/main.css" rel="stylesheet">
+    <link href="dist/main.css" rel="stylesheet">
 </head>
 <body>
     <header id="main-header">
@@ -11,7 +11,7 @@
                       <h2 class="title-massive-1 no-bottom">HOT</h2>
                       <h3 class="title-big no-top">PANTS</h3>
                    </span>
-                <span id="title-fc"><h1 class="title-yuuuge" style="margin:20% 15px 0;">FC</h1></span>
+                <span id="title-fc"><h1 class="title-huge style="margin:20% 15px 0;">FC</h1></span>
             </div>
             <img id="logo-goat" src="src/img/logo-goat.png" alt="Hot Pants FC logo">
             <img id="logo-pants" src="src/img/logo-pants.png" alt="Hot Pants FC logo">
