--- a/src/views/proto.html
+++ b/src/views/proto.html
@@ -2,7 +2,7 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-      <link href="src/styles/main.css" rel="stylesheet">
+      <link href="dist/main.css" rel="stylesheet">
    </head>
    <body>
       <script>
