--- a/src/views/grid.html
+++ b/src/views/grid.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Grid usage example</title>
+    <link href="dist/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="dist/main.css" rel="stylesheet">
 </head>
 <body>
