--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
+    <title>Hot Pants FC</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="dist/main.css" rel="stylesheet">
+    <meta name="viewport" initialscale="1">
 </head>
 <body>
     <header id="main-header">
