--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,7 +3,7 @@
     <title>Hot Pants FC</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="dist/main.css" rel="stylesheet">
-    <meta name="viewport" initialscale="1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <header id="main-header">
