--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Hot Pants FC</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
