--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -40,6 +40,14 @@ body {
   margin-top: 0;
 }
 
+.padding-bottom-1 {
+  padding-bottom: 20px;
+}
+
+.margin-bottom-1 {
+  margin-bottom: 10px;
+}
+
 //background
 #main {
   top: 0;
