--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,7 +14,7 @@
                       <h2 class="title-massive-1 no-bottom">HOT</h2>
                       <h3 class="title-big no-top">PANTS</h3>
                    </span>
-                <span id="title-fc"><h1 class="title-huge style="margin:20% 15px 0;">FC</h1></span>
+                <span id="title-fc"><h1 class="title-huge" style="margin:20% 15px 0;">FC</h1></span>
             </div>
             <img id="logo-goat" src="src/img/logo-goat.png" alt="Hot Pants FC logo">
             <img id="logo-pants" src="src/img/logo-pants.png" alt="Hot Pants FC logo">
