setup JS and SCSS linter, correct errors

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import "base";
-@import "grid";
-@import "logo";
-@import "landing";
-@import "reset";
-@import "roster";
+@import 'base';
+@import 'grid';
+@import 'logo';
+@import 'landing';
+@import 'reset';
+@import 'roster';
