--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,78 +1,77 @@
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
+
 body {
-  font-family: "Lato", sans-serif;
-  padding: 0;
-  margin: 0;
+    font-family: 'Lato', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 .center {
-  text-align: center;
+    text-align: center;
 }
 // font styles
 .title-huge {
-  font-size: 9rem;
+    font-size: 9rem;
 }
 
 .title-massive-1 {
-  font-size: 4.375rem;
+    font-size: 4.375rem;
 }
 
 .title-massive-2 {
-  font-size: 3.75rem;
+    font-size: 3.75rem;
 }
 
 .title-big {
-  font-size: 2.8rem;
+    font-size: 2.8rem;
 }
 
 .light {
-  font-weight: lighter
+    font-weight: lighter;
 }
 
 // spacing
 .no-bottom {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .no-top {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 .padding-bottom-1 {
-  padding-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .margin-bottom-1 {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 //background
 #main {
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background: url("../src/img/field-bg.jpg");
-  background-repeat: no-repeat;
-  -webkit-background-size: cover !important;
-  background-size: cover !important;
-  position: relative;
-  float: left;
-
-  &:before {
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    position: absolute;
-    content: "";
-    background-color: rgba(110, 45, 86, 0.7);
-    transition: background-color 0.6s cubic-bezier(0.25,0.46,0.45,0.94);
-    z-index: 1;
+    display: block;
+    background: url('../img/field-bg.jpg');
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+    position: relative;
+    float: left;
 
-  }
-
+    &:before {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        content: '';
+        background-color: rgba(110, 45, 86, .7);
+        transition: background-color .6s cubic-bezier(.25, .46, .45, .94);
+        z-index: 1;
+    }
 }
