--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -1,4 +1,4 @@
-$nColumns: 12;
+$n-columns: 12;
 
 $breakpoints: (
     xs: 320px,
@@ -8,72 +8,83 @@ $breakpoints: (
 );
 
 @mixin break($size) {
-  @media (min-width: map-get($breakpoints, $size)) {
-    @content;
-  }
+    @media (min-width: map-get($breakpoints, $size)) {
+        @content;
+    }
 }
 
 @mixin max($size) {
-  @media (max-width: map-get($breakpoints, $size - 1px)) {
-    @content
-  }
+    @media (max-width: map-get($breakpoints, $size - 1px)) {
+        @content
+    }
 }
 
 [class*='col-'] {
-  float: none;
-  width: 100%;
+    float: none;
+    width: 100%;
+    max-width: 100%;
+    padding: 0 10px;
+    min-height: 1px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 
-  &.grid {
-      width: calc(100% + 20px);
-  }
-  @media (min-width: (map-get($breakpoints, sm))) {
-    float: left;
-  }
-  max-width: 100%;
-  padding: 0 10px;
-  min-height: 1px;
-  webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box
+    &.grid {
+        width: calc(100% + 20px);
+    }
+
+    @media (min-width: (map-get($breakpoints, sm))) {
+        float: left;
+    }
 }
 
 .grid {
-  margin: 0 auto;
-  padding: 0 10px 10px;
-  max-width: 1600px;
-  box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0 10px 10px;
+    max-width: 1600px;
+    box-sizing: border-box;
 
-  // loop over the breakpoints
-  @each $key, $value in $breakpoints {
-    @for $i from $nColumns through 1 {
-      .col-#{$key}-#{$i} {
-        @include break($key) {
-          width: (100% * ($i / $nColumns));
-        }
-        &.grid{
-          @include break($key) {
-            width: calc(#{(100% * $i / $nColumns)} + 20px);
-          }
-        }
-      }
-    }
-  }
-  //hide classes
-  .hide-sm {
-    @media (min-width: map-get($breakpoints, sm)) and (max-width: map-get($breakpoints, md) - 1px) {
-      display: none;
-    }
-  }
-  .hide-xs {
-    @media (min-width: map-get($breakpoints, xs)) and (max-width: map-get($breakpoints, sm) - 1px) {
-      display: none;
-    }
-  }
+    // loop over the breakpoints
+    @each $key, $value in $breakpoints {
+        @for $i from $n-columns through 1 {
+            .col-#{$key}-#{$i} {
+                @include break($key) {
+                    width: (100% * ($i / $n-columns));
+                }
 
-  .grid {
-    margin-left: -10px;
-    margin-right: -10px
-  }
+                &.grid {
+                    @include break($key) {
+                        width: calc(#{(100% * $i / $n-columns)} + 20px);
+                    }
+                }
+            }
+        }
+    }
+
+    // non-prefixed columns
+    @for $i from $n-columns through 1 {
+        .col-#{$i} {
+            width: (100% * ($i / $n-columns));
+
+            &.grid {
+                width: calc(#{(100% * $i / $n-columns)} + 20px);
+            }
+        }
+    }
+    //hide classes
+    .hide-sm {
+        @media (min-width: map-get($breakpoints, sm)) and (max-width: map-get($breakpoints, md) - 1px) {
+            display: none;
+        }
+    }
+
+    .hide-xs {
+        @media (min-width: map-get($breakpoints, xs)) and (max-width: map-get($breakpoints, sm) - 1px) {
+            display: none;
+        }
+    }
+
+    .grid {
+        margin-left: -10px;
+        margin-right: -10px;
+    }
 }
-
-
