--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,15 +1,15 @@
 *,
 *:after,
 *:before {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 img {
-  width: auto;
-  max-width: 100%;
-  height: auto !important;
+    width: auto;
+    max-width: 100%;
+    height: auto;
 }
