--- a/src/views/proto.html
+++ b/src/views/proto.html
@@ -30,7 +30,7 @@
                      elementPlayer.style.backgroundImage = "url('" + player.imgPri + "')";
                      elementPlayer.style.backgroundRepeat = "no-repeat";
                      elementPlayer.addEventListener("mouseenter", function (mee) {
-                        elementPlayer.style.backgroundImage = "url('" + player.imgSec+ "')";
+                        elementPlayer.style.backgroundImage = "url('" + player.imgSec + "')";
                      });
                      elementPlayer.addEventListener("mouseexit", function (mex) {
                         elementPlayer.style.backgroundImage = "url('" + player.imgPri + "')";
@@ -47,7 +47,7 @@
       </script>
       <div id="main">
          <div class="grid">
-            <div class="col-xx-12">
+            <div class="col-lg-12">
                <header class="title-massive-2 center" id="header-pri">
                   <h1>Hot Pants FC</h1>
                </header>
