added favicon, fixed linter errors

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <title>Hot Pants FC</title>
+    <link rel="shortcut icon" href="/hpfc.ico" type="image/x-icon">
+    <link rel="icon" href="/hpfc.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link href="dist/main.css" rel="stylesheet">
+    <link href="/dist/main.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
