--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -56,7 +56,7 @@ body {
     width: 100%;
     height: 100%;
     display: block;
-    background: url('../img/field-bg.jpg');
+    background: url('/src/img/field-bg.jpg');
     background-repeat: no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
