--- a/src/views/proto.html
+++ b/src/views/proto.html
@@ -3,7 +3,7 @@
    <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-      <link href="dist/main.css" rel="stylesheet">
+      <link href="/dist/main.css" rel="stylesheet">
    </head>
    <body>
       <script>
@@ -41,7 +41,7 @@
                }
             };
 
-            http.open("GET", "../../static/data/roster.json", true);
+            http.open("GET", "/static/data/roster.json", true);
             http.send();
          });
       </script>
