--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -5,20 +5,20 @@
 }
 
 #logo-container {
-    width: 400px;
-    height: 270px;
+    width: 320px;
+    height: 215px;
     margin: auto;
 }
 
 #logo-goat {
     position: absolute;
-    width: 400px;
+    width: 300px;
     margin: auto;
 }
 
 #logo-pants {
     position: absolute;
-    width: 400px;
+    width: 300px;
     margin: auto;
     animation: pants 1.5s infinite ease-in-out alternate;
 }
@@ -42,9 +42,15 @@
 }
 
 #title-hp {
+    width: 45%;
+    display: inline-block;
     margin-right: 0;
 }
 
 #title-fc {
+    position: relative;
+    left: 40px;
+    bottom: 20px;
+    display: inline-block;
     color: #b300b3;
 }
