--- a/src/views/proto.html
+++ b/src/views/proto.html
@@ -4,6 +4,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
       <link href="/dist/main.css" rel="stylesheet">
+      <title>HPFC</title>
    </head>
    <body>
       <script>
@@ -53,7 +54,9 @@
                </header>
             </div>
 
-            <section id="roster" class="grid"></section>
+            <section id="roster" class="grid">
+                <h2 style="display: none">Roster</h2>
+            </section>
 
          </div>
       </div>
