--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,15 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <!--Comment!-->
     <header id="main-header">
         <div id="logo-container">
             <div style="position: absolute; z-index: 200; margin: 30px 20px;">
-                <span id="title-hp">
+                <div id="title-hp">
                    <h2 class="title-massive-1 no-bottom">HOT</h2>
                    <h3 class="title-big no-top">PANTS</h3>
-                </span>
-                <span id="title-fc"><h1 class="title-huge" style="margin:20% 0;">FC</h1></span>
+               </div>
+                <div id="title-fc"><h1 class="title-huge" style="margin:20% 0;">FC</h1></div>
             </div>
             <img id="logo-goat" src="src/img/logo-goat.png" alt="Hot Pants FC logo">
             <img id="logo-pants" src="src/img/logo-pants.png" alt="Hot Pants FC logo">
