--- a/src/styles/_logo.scss
+++ b/src/styles/_logo.scss
@@ -1,7 +1,7 @@
 #main-header {
     display: flex;
     flex-direction: column;
-    padding-top: 10%;
+    padding-top: 100px;
 }
 
 #logo-container {
