--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <!-- comment -->
     <header id="main-header">
         <div id="logo-container">
             <div style="position: absolute; z-index: 200; margin: 30px 20px;">
